# browser_starter

./: README.en.md  README.md  pyproject.toml
browser_starter/: __main__.py
tests/: __main__.py  cli.py  cui.py  main.py
